[tool.poetry]
name = "cnholiday"
version = "0.1.1-alpha.4"
description = "查询某天是否放假"
authors = [
    "ringsaturn <ringsaturn.me@gmail.com>"
]
readme = 'README.md'
repository = "https://github.com/ringsaturn/cnholiday"
homepage = "https://github.com/ringsaturn/cnholiday"
documentation = "https://ringsaturn.github.io/cnholiday/"
# keywords = ['packaging', 'poetry']

[tool.poetry.scripts]
app = "cnholiday:app"

[tool.poetry.dependencies]
python = "^3.6"
pre-commit = "^1.20"

[tool.poetry.dev-dependencies]
pytest = "=5.0.0"
twine = "^2.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
